Update readme, requirements files, and tox config.

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,9 @@ max-line-length = 99
 
 [testenv]
 deps =
-  -rrequirements.txt
+  django16: django~=1.6.0
+  -rrequirements/requirements-base.txt
+  -rrequirements/requirements-test.txt
 commands = pytest
 
 [testenv:flake8]
