--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-django~=1.6.0
-markdown==3.0.1
-pytest==3.8.2
-pytest-django==2.9.1
+-rrequirements/requirements-dev.txt
+-rrequirements/requirements-base.txt
+-rrequirements/requirements-test.txt
