Upgrade to Django 1.10-1.11

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = tests.settings
+filterwarnings =
+  ignore::pytest.RemovedInPytest4Warning
 
 [tox]
-envlist = py27-django16, flake8
+envlist = py27-django11{0,1}, flake8
 
 [flake8]
 exclude = *migrations/*
@@ -10,7 +12,8 @@ max-line-length = 99
 
 [testenv]
 deps =
-  django16: django~=1.6.0
+  django110: django~=1.10.0
+  django111: django~=1.11.0
   -rrequirements/requirements-base.txt
   -rrequirements/requirements-test.txt
 commands = pytest
