--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
     matrix:
         - TOX_ENV=py27-django110
         - TOX_ENV=py27-django111
+        - TOX_ENV=flake8
 install:
     - pip install tox-travis
 script:
