--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ filterwarnings =
   ignore::pytest.RemovedInPytest4Warning
 
 [tox]
-envlist = py27-django11{0,1}, flake8
+envlist = py{27,35,36,37}-django111, py37-flake8
 
 [flake8]
 exclude = *migrations/*
@@ -12,12 +12,11 @@ max-line-length = 99
 
 [testenv]
 deps =
-  django110: django~=1.10.0
   django111: django~=1.11.0
   -rrequirements/requirements-base.txt
   -rrequirements/requirements-test.txt
 commands = pytest
 
-[testenv:flake8]
+[testenv:py37-flake8]
 deps = flake8
 commands = flake8 subjects tests setup.py
