Add more tests for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ filterwarnings =
   ignore::pytest.RemovedInPytest4Warning
 
 [tox]
-envlist = py{27,35,36,37}-django111, py37-flake8
+envlist = py{35,36,37}-django111, py37-flake8
 
 [flake8]
-exclude = *migrations/*
+exclude = *migrations/*, ^subjects/*.py, ^tests/*.py
 max-line-length = 99
 
 [testenv]
