Modify the tests to assert context variables.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ filterwarnings =
 envlist = py{35,36,37}-django111, py37-flake8
 
 [flake8]
-exclude = *migrations/*, ^subjects/*.py, ^tests/*.py
+exclude = *migrations/*
 max-line-length = 99
 
 [testenv]
