--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest flake8
+          pip install flake8
+          pip install -r requirements.txt
       - name: Lint with flake8
         run: |
           # Python syntax errors or undefined names will stop the build completely.
